<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/Location"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#ebebeb"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Magnitude"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#ebebeb"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Depth"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Latitude"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#ebebeb"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Longitude"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />
    </LinearLayout>

</LinearLayout>